--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "devDependencies": {
-    "@tailwindcss/cli": "^4.1.17",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.7.1"
-  },
-  "name": "tailwind-learning",
+  "name": "tailwind-vanilla",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple Tailwind v4 Setup",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github-amaldev:im-amal-raj/Tailwind-learning.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@tailwindcss/cli": "^4.0.0",
+    "tailwindcss": "^4.0.0"
+  }
 }
